2005-12-19  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-auth-conv-tty.cc, sbuild-auth.cc: Add support for
	iostream.

	* Replace most uses of g_strdup_printf with format_string.

	* schroot/sbuild-util.cc (format_string): New function to create a
	std::string from a C-style format string.

2005-12-18  Roger Leigh  <rleigh@debian.org>

	* Remove GLib types (gboolean, gchar, gint), and replace with
	standard C++ types.

2005-12-18  Roger Leigh  <rleigh@debian.org>

	* All typedefs and enums have been moved into the class
	declarations, with the Sbuild and Object prefixes removed.

	* GError error propagation has been replaced with
	sbuild::Exception<> in all code.  The catch blocks are still
	local, simply replacing GError, but this will be fixed up later.

	* All Sbuild objects are in the "sbuild" namespace, and Schroot
	object are in the "schroot" namespace, with the prefix removed
	from the class names.

	* schroot/sbuild-error.h: Remove GError/GType glue, and replace
	with a simple templated exception class derived from
	std::runtime_error, initially to replace GError in a compatible
	manner.

2005-12-17  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-config.cc (load): Add GKeyFile error checking.

	* schroot/sbuild-chroot-lvm-snapshot.cc (read_keyfile): New
	private method to read a GKeyFile.

	* schroot/sbuild-chroot-block-device.cc (read_keyfile): New
	private method to read a GKeyFile.

	* schroot/sbuild-chroot-plain.cc (read_keyfile): New private
	method to read a GKeyFile.

	* schroot/sbuild-chroot.cc (read_keyfile): New private method to
	read a GKeyFile.

	* schroot/sbuild-keyfile.h: New file.  Simple wrapper funtions for
	interfacing with GKeyFile.

2005-12-16  Roger Leigh  <rleigh@debian.org>

	* Convert all sources from GObject-based C to ISO C++.  This
	conversion is not yet complete, but builds without error.

2005-11-07  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Update.

	* debian/schroot.init: Remove "function" bashism.
