@@ -37,8 +37,8 @@
 #include <unistd.h>
 
 #include <glib.h>
-#include <glib/gi18n.h>
 
+#include "sbuild-i18n.h"
 #include "sbuild-chroot-lvm-snapshot.h"
 #include "sbuild-keyfile.h"
 #include "sbuild-lock.h"
