@@ -36,8 +36,8 @@
 #include <unistd.h>
 
 #include <glib.h>
-#include <glib/gi18n.h>
 
+#include "sbuild-i18n.h"
 #include "sbuild-chroot-plain.h"
 #include "sbuild-keyfile.h"
 
