@@ -39,8 +39,8 @@
 #include <string.h>
 
 #include <glib.h>
-#include <glib/gi18n.h>
 
+#include "sbuild-i18n.h"
 #include "sbuild-chroot.h"
 #include "sbuild-keyfile.h"
 
